# duckhandy

./: .gitmodules  CMakeLists.txt  README.md  flat_git.yaml  flat_git.yml
cmake/Modules/: shared_git_project.cmake
include/duckhandy/: MaxSizedArray.hpp  MaxSizedArray.inl  cmake_on_off.h  compatibility.h  ducktypes.hpp  endianness.hpp  infix_iterator.hpp  int_conv.hpp  int_to_string_ary.hpp  int_types.hpp  lengthof.h  lexical_cast.hpp  sequence_bt.hpp  string_bt.hpp  stringize.h
include/duckhandy/implem/: AutomemBase.hpp  AutomemBase.inl  IteratorOnPtr.hpp  reversed_sized_array_bt.hpp
test/unit/: CMakeLists.txt  endianness_test.cpp  int_conv_test.cpp  lexical_cast_test.cpp  main.cpp
